--- a/Game2048_Web.css
+++ b/Game2048_Web.css
@@ -47,10 +47,41 @@
     background-color: #ecc400;
 }
 
-/* 主体 水平居中 */
-#main{
-    width: 500px;
+#game{
+    width: 400px;
     margin: 0 auto;
+}
+
+#control{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
+}
+
+span{
+    font: bold 32px/100px "黑体";
+    text-align: center;
+    color: white;
+    background-color: #cdc1b4;
+    box-sizing: border-box;
+    border: 1px white solid;
+    cursor: pointer;
+}
+
+#up{
+    display: block;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+}
+
+#left,#down,#right{
+    display: block;
+    float: left;
+    width: 100px;
+    height: 100px;
 }
 
 table{
