--- a/Game2048_Web.css
+++ b/Game2048_Web.css
@@ -55,8 +55,8 @@
 #control{
     width: 300px;
     height: 200px;
-    position: absolute;
-    top: 400px;
+    position: fixed;
+    top: 450px;
     margin: 0 auto;
 }
 
